# as_rag

./: LICENSE  README.md  pyproject.toml
src/: get_embedding_function.py  load_data.py  print_encoding.py  query_data.py
