[tool.poetry]
name = "as-rag"
version = "0.1.0"
description = ""
authors = ["tjjd4 <t01123581321345589@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.3"
langchain-community = "^0.3.3"
pypdf = "^5.0.1"
boto3 = "^1.35.42"
huggingface-hub = {extras = ["cli"], version = "^0.26.1"}
sentence-transformers = "^3.2.1"
chromadb = "^0.5.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
